Fix: Remove vertical scrollbar on smaller screens

--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@ footer a{
 }
 
 @media (max-width:560px) {
+    body{
+        min-height: 92vh;
+    }
+
     .advice-container{
         max-width: 444px;
         padding-top: 4px;
@@ -114,6 +118,7 @@ footer a{
     
     footer{
         font-size: 12px;
+        bottom:4px;
     }
 
     .initial-dice-roll{
